<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/create_account" />

    <EditText
        android:id="@+id/email_register_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/password_register_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/confirm_password_register_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/register_customer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        tools:ignore="HardcodedText" />
</LinearLayout>